--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/market.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ola-Chris | Market</title>
+    <script src="https://cdn.kkiapay.me/k.js"></script>
   </head>
   <body>
     <div id="root"></div>
